# each-mind

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-roadmap-completion.md
eachmind/: __init__.py  agent.py  hooks.py  serialization.py
eachmind/async_primitives/: __init__.py  private_memory.py  shared_memory.py
eachmind/backends/: __init__.py  async_memory.py  async_sqlite.py  base.py  memory.py  redis.py  sqlite.py
eachmind/primitives/: __init__.py  consolidation.py  drift.py  memory_event.py  perspective.py  private_memory.py  shared_memory.py
eachmind/protocol/: __init__.py  interfaces.py
eachmind/retrieval/: __init__.py  base.py  tfidf.py
eachmind/utils/: __init__.py
eachmind/visualization/: __init__.py  drift_viz.py
examples/: basic_usage.py  crewai_integration.py  drift_visualization.py  langgraph_integration.py  sandbox_drift_demo.py  sqlite_backend.py  swarm_integration.py
tests/: test_async_backends.py  test_async_primitives.py  test_backends.py  test_concurrency.py  test_consolidation_algorithms.py  test_hooks.py  test_primitives.py  test_protocol.py  test_retrieval.py  test_serialization.py  test_ttl.py  test_visualization.py
